Fix spread view bug on Safari

--- a/src/scss/vivliostyle-viewer.scss
+++ b/src/scss/vivliostyle-viewer.scss
@@ -69,6 +69,8 @@ html[data-vivliostyle-paginated] {
 
         & > div {
             margin: auto;
+            -webkit-flex-shrink: 0;
+            flex-shrink: 0;
         }
 
         &[data-vivliostyle-spread-view=true] {
